# NeatScroll

./: CMakeLists.txt  NeatScroll.sln
NeatScroll/: Bezier.hpp  FourFingersDownGesture.cpp  FourFingersDownGesture.h  FourFingersLeftGesture.cpp  FourFingersLeftGesture.h  FourFingersRightGesture.cpp  FourFingersRightGesture.h  FourFingersUpGesture.cpp  FourFingersUpGesture.h  Gesture.cpp  Gesture.h  Gesture.hpp  GestureDetector.cpp  GestureDetector.hpp  GestureHandler.cpp  GestureHandler.hpp  GestureRecognizer.cpp  GestureRecognizer.hpp  HighPerformanceTimer.cpp  HighPerformanceTimer.h  HighPerformanceTimer.hpp  Movement.cpp  Movement.h  MovementDetector.cpp  MovementDetector.hpp  MovementManager.cpp  MovementManager.hpp  NeatScroll.cpp  NeatScroll.vcxproj  NeatScroll.vcxproj.filters  ProcessDetector.cpp  ProcessDetector.h  ProcessDetector.hpp  SynapticsTouchpad.cpp  SynapticsTouchpad.hpp  TaskViewDetector.cpp  TaskViewDetector.h  Timer.h  Timer.hpp  Touchpad.hpp  (+8 more)
NeatScroll/Actions/: CombiningPerformer.cpp  CombiningPerformer.h  CombiningPerformer.hpp  ConditionalPerformer.h  ConditionalPerformer.hpp  KeyPressPerformer.cpp  KeyPressPerformer.h  KeyPressPerformer.hpp  TaskViewClosePerformer.cpp  TaskViewClosePerformer.h  TaskViewOpenPerformer.cpp  TaskViewOpenPerformer.h  VirtualDesktopLeftPerformer.cpp  VirtualDesktopLeftPerformer.h  VirtualDesktopRightPerformer.cpp  VirtualDesktopRightPerformer.h
NeatScroll/Gestures/: FourFingersDownGesture.cpp  FourFingersDownGesture.h  FourFingersLeftGesture.cpp  FourFingersLeftGesture.h  FourFingersRightGesture.cpp  FourFingersRightGesture.h  FourFingersUpGesture.cpp  FourFingersUpGesture.h  SwipeGestureRecognizer.cpp  SwipeGestureRecognizer.h  SwipeGestureRecognizer.hpp
TestGestures/: TestGestures.cpp
